# hpc_analysis

./: .gitignore  README.md  pyproject.toml
artifacts/metrics/vector_add/: cutedsl_N1048576_dtypefloat32_bs256.json  tilelang_N1048576_dtypefloat32_bs256.json  triton_N1048576_dtypefloat32_bs256.json
artifacts/ptx/vector_add/: cutedsl_N1048576_bs256.ptx  tilelang_N1048576_bs256.ptx  triton_N1048576_bs256.ptx
benchmark/: benchmark.sh
blog/vector_add/: plot_gpu_roofline.py  plot_vector_add.py
python/hpc_analysis/: __init__.py
python/hpc_analysis/common/: __init__.py  checks.py  config.py  cuda.py  io.py  ptx.py  timing.py
python/hpc_analysis/vector_add/: __init__.py  bench.py  cutedsl.py  tilelang.py  triton.py
